fix layout issue; test ajax submit

--- a/index.css
+++ b/index.css
@@ -25,6 +25,9 @@ body {
     top: 0;
     right: 0;
     padding: 10px;
+    width: 200px;
+    text-align: right;
+
 }
 
 #social a {
